--- a/.htaccess
+++ b/.htaccess
@@ -76,8 +76,8 @@ Options -Indexes
     # Autoriser les iframes Firebase
     Header always set X-Frame-Options "SAMEORIGIN"
     
-    # Content Security Policy pour Firebase
-    Header always set Content-Security-Policy "default-src 'self' https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://apis.google.com https://www.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://firestore.googleapis.com https://firebase.googleapis.com wss://s-usc1c-nss-2067.firebaseio.com;"
+    # 🔧 FIX CRITIQUE: CSP corrigé pour Firebase + cleardot.gif
+    Header always set Content-Security-Policy "default-src 'self' https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://apis.google.com https://www.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: https://www.google.com; connect-src 'self' https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://firestore.googleapis.com https://firebase.googleapis.com https://www.google.com https://apis.google.com https://www.googleapis.com https://accounts.google.com wss://s-usc1c-nss-2067.firebaseio.com wss://*.firebaseio.com;"
     
     # Headers de sécurité recommandés
     Header always set X-Content-Type-Options "nosniff"
